Feat: Symfony's default Directory Structure override
The default structure was override to deploy in a
shared host.

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false
-        }
+        },
+        "public-dir": "public_html"
     }
 }
